[package]
name = "petgraph-gen"
version = "0.1.2"
authors = ["Tapani Honkanen"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["graph", "graph-algorithms", "generator"]
categories = ["algorithms"]
description = "Graph generators for petgraph"
repository = "https://github.com/tapanih/petgraph-gen"
readme = "README.md"
documentation = "https://docs.rs/petgraph-gen"

[lib]
name = "petgraph_gen"

[dependencies]
petgraph = "0.6.2"
rand = "0.8.5"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false